--- a/FM1/src/ПРОЕКТ.html
+++ b/FM1/src/ПРОЕКТ.html
@@ -143,7 +143,7 @@
 			<br></br>
 			<div id = "Otv" class = "color3">
 				<h2>Результат:</h2>
-				<pre id = "result"></pre> <!предварительно отформатированный текстовый элемент>
+				<pre id = "result"></pre>
 			</div>
 			<li class = "color4">Инструкция по использованию калькулятора:
 				<ul>
